--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
     <div class="introducao">
       <div class="introducao-conteudo">
         <h1 class="font-1-xxl cor-0">Bicicletas feitas sob medida<span class="cor-p1">.</span></h1>
-        <p class="font-2-l cor-5">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o
+        <p class="font-2-l cor-5">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você.
+          Explore o
           mundo na sua
           velocidade com a Bikcraft</p>
         <a class="botao" href="./bicicletas.html">Escolha a sua</a>
@@ -45,8 +46,30 @@
     </div>
   </main>
 
-  <h2 class="font-1-xxl">escolha a sua<span class="cor-p1">.</span></h2>
+  <article class="bicicletas-lista">
+    <h2 class="font-1-xxl">escolha a sua<span class="cor-p1">.</span></h2>
 
+    <ul>
+      <li>
+        <a href="./bicicletas/magic.html"></a>
+        <img src="./img/bicicletas/magic-home.jpg" alt="Bicicleta preta">
+        <h3 class="font-1-xl">Magic Might</h3>
+        <span class="font-2-m cor-8">R$ 2499</span>
+      </li>
+      <li>
+        <a href="./bicicletas/Nimbus.html"></a>
+        <img src="./img/bicicletas/nimbus-home.jpg" alt="Bicicleta preta">
+        <h3 class="font-1-xl">Nimbus Stark</h3>
+        <span class="font-2-m cor-8">R$ 4999</span>
+      </li>
+      <li>
+        <a href="./bicicletas/nebula.html"></a>
+        <img src="./img/bicicletas/nebula-home.jpg" alt="Bicicleta preta">
+        <h3 class="font-1-xl">Nebula Cosmic</h3>
+        <span class="font-2-m cor-8">R$ 3999</span>
+      </li>
+    </ul>
+  </article>
 </body>
 
 </html>
