--- a/termos.html
+++ b/termos.html
@@ -16,7 +16,7 @@
   <title>Termos e Condições | Bikcraft - Bicicletas Elétricas</title>
 </head>
 
-<body>
+<body id="termos">
   <header class="header-bg">
     <div class="header container">
       <a href="./"><img src="./img/bikcraft.svg" alt="Bikcraft" /></a>
