--- a/bicicletas/nebula.html
+++ b/bicicletas/nebula.html
@@ -12,7 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap"
       rel="stylesheet"
     />
-    <title>Nimbus | Bikcraft - Bicicletas Elétricas</title>
+    <title>Nebula | Bikcraft - Bicicletas Elétricas</title>
   </head>
 
   <body id="bicicleta">
@@ -35,9 +35,9 @@
     <main class="titulo-bg">
       <div>
         <div class="titulo container">
-          <p class="font-2-xl cor-5">R$ 4999</p>
+          <p class="font-2-xl cor-5">R$ 3999</p>
           <h1 class="font-1-xxl cor-0">
-            Nimbus Stark<span class="cor-p1">.</span>
+            Nebula Cosmic<span class="cor-p1">.</span>
           </h1>
         </div>
       </div>
@@ -49,7 +49,7 @@
         </div>
         <div class="bicicleta-conteudo">
           <p class="font-2-l cor-5">
-            A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela
+            A Nebula Cosmic é a melhor Bikcraft já criada pela nossa equipe. Ela
             vem equipada com os melhores acessórios, o que garante maior
             velocidade.
           </p>
@@ -124,10 +124,10 @@
           </a>
         </li>
         <li>
-          <a href="./nebula.html">
-            <img src="../img/bicicletas/nebula.jpg" alt="Bicicleta preta" />
-            <h3 class="font-1-xl">Nebula Cosmic</h3>
-            <span class="font-2-m cor-8">R$ 3999</span>
+          <a href="./nimbus.html">
+            <img src="../img/bicicletas/nimbus.jpg" alt="Bicicleta preta" />
+            <h3 class="font-1-xl">Nimbus Stark</h3>
+            <span class="font-2-m cor-8">R$ 4999</span>
           </a>
         </li>
       </ul>
