--- a/index.html
+++ b/index.html
@@ -231,8 +231,12 @@
             </ul>
           </nav>
         </div>
-        <p class="footer-copy font-2-m cor-6">Bikcraft © Alguns Direitos Reservados.</p>
+        <p class="footer-copy font-2-m cor-6">
+          Bikcraft © Alguns Direitos Reservados.
+        </p>
       </div>
     </footer>
+
+    <script src="./js/script.js"></script>
   </body>
 </html>
